<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="PantallaAgregar"
    tools:context=".PrincipalActivity">

    <GridView
        android:id="@+id/GVDtos"
        android:layout_width="408dp"
        android:layout_height="304dp"
        android:layout_marginTop="4dp"
        android:numColumns="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listfooter="Nombre,Edad,Correo,Telefono,q,w"
        tools:listheader="Nombre,Edad,Correo,Telefono,q,w">


    </GridView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/TP2"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GVDtos"
        tools:ignore="UnknownId" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="450dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="30sp"
                android:text="@string/Matri"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtMatri"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/Matri"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/TextView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="80sp"
                android:text="@string/Nomb"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPANom"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:hint="@string/Nomb"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/TextView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="130sp"
                android:text="@string/Edad"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPAEdad"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="110dp"
                android:ems="10"
                android:hint="@string/Edad"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/TextView" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="180sp"
                android:text="@string/Sem"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPASem"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="160dp"
                android:ems="10"
                android:hint="@string/Sem"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/TextView" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="230sp"
                android:text="@string/Prom"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPAProm"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="210dp"
                android:ems="10"
                android:hint="@string/Prom"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/TextView" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="270sp"
                android:text="@string/Edo"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPAEdo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="260dp"
                android:enabled="false"
                android:ems="10"
                android:hint="@string/Edo"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/TextView" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="300sp"
                android:text="."
                android:textColor="@color/black"
                android:textSize="20sp" />
        </FrameLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAgrega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:onClick="PantallaAgregar"
        android:text="@string/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/btnModifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:onClick="PantallaActualizar"
        android:text="@string/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btnElimina"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toEndOf="@+id/btnAgrega"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/btnElimina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:onClick="PantallaEliminar"
        android:text="@string/btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/copyright"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>